@startuml erd_identity_auth
' run:
' cd docs/diagrams/src
' plantuml -tpng -Ddpi=300 -o ../export erd_identity_auth.puml

hide circle
skinparam shadowing false
skinparam linetype ortho
skinparam dpi 300
skinparam monochrome true
skinparam pageSize A4
skinparam DefaultFontName Arial
skinparam DefaultFontSize 12
skinparam entityAttributeIconSize 0

top to bottom direction
skinparam nodesep 30
skinparam ranksep 55

title ERD — Identity/Auth + Doctors

entity "doctors" as doctors {
  [#] id : INTEGER <<PK>> <<NOT NULL>>
  --
  first_name : VARCHAR(100) <<NOT NULL>>
  last_name  : VARCHAR(100) <<NOT NULL>>
  role       : ENUM doctor_role(specialist,resident) <<NOT NULL>>
  is_active  : BOOLEAN <<NOT NULL>> [DEFAULT true]
  is_head    : BOOLEAN <<NOT NULL>> [DEFAULT false]
  email      : VARCHAR(320) <<NULL>> <<UNIQUE uq_doctors_email>>
  created_at : DATETIME(TZ) <<NOT NULL>> [DEFAULT CURRENT_TIMESTAMP]
  updated_at : DATETIME(TZ) <<NOT NULL>> [DEFAULT CURRENT_TIMESTAMP]
  calendar_feed_token : VARCHAR(36) <<NULL>> <<UNIQUE ix_doctors_calendar_feed_token>>
  phone_number : VARCHAR(20) <<NULL>>
}

entity "users" as users {
  [#] id : INTEGER <<PK>> <<NOT NULL>>
  --
  email         : VARCHAR(320) <<NOT NULL>> <<UNIQUE uq_users_email>>
  role          : ENUM user_role(admin,doctor,doctor_admin) <<NOT NULL>>
  password_hash : VARCHAR(256) <<NOT NULL>>
  is_active     : BOOLEAN <<NOT NULL>> [DEFAULT true]
  doctor_id     : INTEGER <<NULL>> <<FK doctors.id>> <<UNIQUE uq_users_doctor_id>>
  created_at    : DATETIME(TZ) <<NOT NULL>> [DEFAULT CURRENT_TIMESTAMP]
  updated_at    : DATETIME(TZ) <<NOT NULL>> [DEFAULT CURRENT_TIMESTAMP]
}

entity "password_reset_tokens" as prt {
  [#] id : INTEGER <<PK>> <<NOT NULL>>
  --
  user_id     : INTEGER <<NOT NULL>> <<FK users.id>> <<UNIQUE uq_password_reset_tokens_user_id>>
  token       : VARCHAR(128) <<NOT NULL>> <<UNIQUE uq_password_reset_tokens_token>>
  expires_at  : DATETIME(TZ) <<NOT NULL>>
  created_at  : DATETIME(TZ) <<NOT NULL>> [DEFAULT CURRENT_TIMESTAMP]
}

entity "pending_doctors" as pending {
  [#] id : INTEGER <<PK>> <<NOT NULL>>
  --
  first_name  : VARCHAR(100) <<NOT NULL>>
  last_name   : VARCHAR(100) <<NOT NULL>>
  email       : VARCHAR(320) <<NOT NULL>> <<UNIQUE uq_pending_doctors_email>>
  created_at  : DATETIME(TZ) <<NOT NULL>> [DEFAULT CURRENT_TIMESTAMP]
  phone_number : VARCHAR(20) <<NULL>>
}

' -----------------------
' Layout control (portable)
' Force vertical stack: doctors -> users -> prt -> pending
' -----------------------
doctors -[hidden]-> users
users   -[hidden]-> prt
prt     -[hidden]-> pending

' -----------------------
' Relationships (ONLY real DB FKs)
' -----------------------
doctors |o--o| users
users ||--o| prt

@enduml